--- a/static/css/top_nav_bar.css
+++ b/static/css/top_nav_bar.css
@@ -3,7 +3,7 @@ body {
   /* Background Image taken from Cocorini, cocorini.tumblr.com/patterns */
   /* background-image: url("http://31.media.tumblr.com/60258e73e78ddd833e85bd49fac2a5a8/tumblr_mt67noIbPl1ru3nbdo4_r1_100.png"); */
   /* background-image: url("http://36.media.tumblr.com/ebe54054565476bcb1b95fac4375428c/tumblr_novhnrwKja1ru3nbdo9_r2_250.png"); */
-  background-image: url("http://i.imgur.com/WbvTTm9.png");
+  background-image: url("http://i.imgur.com/qnQNLyt.png");
   background-color: #FFFFFF;
 
   /* Setting margins for all content */
@@ -22,7 +22,6 @@ h1, h2, h3, h4, h5, h6{
 .navbar-inverse {
   background-color: #96BCFF;
   border-color: #96BCFF;
-  border-radius: 1rem;
 }
 
 /* Top Left */
