--- a/static/css/help.css
+++ b/static/css/help.css
@@ -1,3 +1,16 @@
 .home:hover {
   text-decoration: none;
 }
+
+#faq {
+	margin: auto;
+	padding: auto;
+	width: 75%;
+	border: 1px solid #FFFFFF;
+	border-radius: 1rem;
+	background-color: #FFFFFF;
+}
+
+.btn {
+	margin: 1rem;
+}
