--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -18,37 +18,39 @@
 
 /* Side Nav Popout */
 .sidenav {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 2;
-    top: 0;
-    left: 0;
-    background-color: #FFD996;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
+  position: fixed;
+  padding-top: 60px;
+  height: 100%;
+  width: 0;
+  top: 0;
+  left: 0;
+
+  background-color: #FFFFFF;
+
+  overflow-x: hidden;
+  transition: 0.5s;
+  z-index: 2;
 }
 
 .sidenav a, .sidenav p {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #FFFFFF;
-    display: block;
-    transition: 0.3s
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #FFD996;
+  display: block;
+  transition: 0.3s
 }
 
 .sidenav a:hover, .offcanvas a:focus, .sidenav p:hover, .offcanvas p:focus{
-    color: #96BCFF;
+  color: #96BCFF;
 }
 
 .sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
 }
 
 #addFriend {
@@ -115,12 +117,13 @@
 
 /* Days (1-31) */
 .days {
-    padding: 10px 0;
+    padding: 15px 0;
     background: #FFFFFF;
     margin: 0;
 }
 
 .days li {
+    padding: 10px;
     list-style-type: none;
     display: inline-block;
     width: 13.6%;
@@ -132,7 +135,7 @@
 
 /* Highlight the "current" day */
 .days li .active {
-    padding: 5px;
+    padding: 0px 5px 0px 5px;
     background: #FFD996;
     color: white !important
 }
