--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -1,3 +1,7 @@
+#homeButton {
+  background-color: #70A4FF;
+}
+
 /* Friends List Button */
 #friendsList {
   float: left;
@@ -9,6 +13,7 @@
   font-size: 1rem;
   font-weight: bold;
 
+  transition: 0.3s;
   z-index: 1;
 }
 
@@ -32,16 +37,16 @@
   z-index: 2;
 }
 
-.sidenav a, .sidenav p {
+.sidenav a, .sidenav label {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
   color: #FFD996;
   display: block;
-  transition: 0.3s
+  transition: 0.3s;
 }
 
-.sidenav a:hover, .offcanvas a:focus, .sidenav p:hover, .offcanvas p:focus{
+.sidenav a:hover, .offcanvas a:focus, .sidenav label:hover, .offcanvas label:focus{
   color: #96BCFF;
 }
 
@@ -65,7 +70,7 @@
 .calendar {
   margin-bottom: 1rem;
   width: 100%;
-  min-width: 60%;
+  min-width: 580px;
   z-index: -1;
 }
 
@@ -74,6 +79,7 @@
     padding: 70px 25px;
     max-height: 200px;
     width: 100%;
+    min-width: 60%;
     background: #FFD996;
 }
 
@@ -118,16 +124,17 @@
 
 /* Days (1-31) */
 .days {
-    padding: 15px 0;
+    padding: 20px 0;
     background: #FFFFFF;
     margin: 0;
 }
 
 .days li {
-    padding: 10px;
+    padding: 10px 0px 10px 0px;
     list-style-type: none;
     display: inline-block;
     width: 13.6%;
+    min-width: 13.6%;
     text-align: center;
     margin-bottom: 5px;
     font-size:12px;
