--- a/static/css/top_nav_bar.css
+++ b/static/css/top_nav_bar.css
@@ -32,6 +32,17 @@ h1, h2, h3, h4, h5, h6{
   margin-right: 0;
 }
 
+#navbarCollapseToggle {
+  margin-top: 1.67rem;
+  border-color: #96BCFF;
+  border-radius: 1rem;
+  transition: 0.3s;
+}
+
+#navbarCollapseToggle:hover, #navbarCollapseToggle:focus {
+  background-color: #70A4FF;
+}
+
 /* Title Styling */
 #title {
   color: #FFFFFF;
@@ -50,12 +61,13 @@ h1, h2, h3, h4, h5, h6{
   font-size: 2rem;
   margin-top: 0.67rem;
   margin-bottom: 0.67rem;
-  margin-left: 0;
-  margin-right: 0;
+  margin-left: 0.2rem;
+  margin-right: 0.2rem;
   font-weight: bold;
   transition: 0.3s;
 }
 
+/* Sets Inactive Home Button */
 #homeButton {
   background-color: #96BCFF;
   border-radius: 1rem;
@@ -64,12 +76,13 @@ h1, h2, h3, h4, h5, h6{
 /* Sets Home Button Styling */
 #homeButton:hover, #homeButton:focus {
   background-color: #70A4FF;
+  color: #FFE5B8;
 }
 
 /* Sets Username Color and Rounded Background Border */
 #options {
-  color: #FFFFFF;
   border-radius: 1rem;
+  color: #FFFFFF;
 }
 
 /* Colors Background */
@@ -95,6 +108,20 @@ h1, h2, h3, h4, h5, h6{
   background-color: #96BCFF;
 }
 
+/* Sets Color of Text for the Drop Down Menu */
+.dropdown-menu > li > a {
+  color: #96BCFF;
+  transition: 0.3s;
+}
+
+.navbar-collapse .navbar-nav .dropdown.open > li > a {
+  color: #FFFFFF;
+}
+
+.navbar-collapse .navbar-nav .dropdown.open > li > a:hover {
+  color: #FFD996;
+}
+
 /* No Bullet Styles for ULs */
 ul {
   list-style-type: none;
@@ -114,18 +141,7 @@ ul hr {
 
 /* On small screens, set height to 'auto' for sidenav and grid */
 @media screen and (max-width: 767px) {
-  .sidenav {
-    padding-top: 15px;
-  }
-  .sidenav a {
-    font-size: 18px;
-  }
-
   .row.content {
   	height:auto;
-  }
-
-  .calendar {
-    min-width: 580px;
   }
 }
