--- a/static/css/top_nav_bar.css
+++ b/static/css/top_nav_bar.css
@@ -114,14 +114,6 @@ h1, h2, h3, h4, h5, h6{
   transition: 0.3s;
 }
 
-.navbar-collapse .navbar-nav .dropdown.open > li > a {
-  color: #FFFFFF;
-}
-
-.navbar-collapse .navbar-nav .dropdown.open > li > a:hover {
-  color: #FFD996;
-}
-
 /* No Bullet Styles for ULs */
 ul {
   list-style-type: none;
@@ -143,5 +135,15 @@ ul hr {
 @media screen and (max-width: 767px) {
   .row.content {
   	height:auto;
+  }
+
+  /* Sets Color of Text for Drop Down Menu when Collapsed */
+  .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
+    color: #FFFFFF;
+  }
+
+  /* Sets color of Textwhile Hovering for Drop Down Menu when Collapsed */
+  .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover {
+    color: #FFD996;
   }
 }
