--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -133,7 +133,7 @@
 
 .responsive-calendar .day-headers {
   padding: 10px 0px;
-  background-color: #96BCFF;
+  background-color: #70A4FF;
   color: #FFFFFF;
 }
 
