--- a/static/css/contact_us.css
+++ b/static/css/contact_us.css
@@ -2,11 +2,14 @@
 	margin-bottom: 1rem;
 }
 
+#mainscreen {
+	background-color: #FFFFFF;
+	border: 1px solid #FFFFFF;
+	border-radius: 1rem;
+}
+
 #richard, #ingrid, #jovan {
 	margin: auto;
 	padding: auto;
 	width: 25%;
-	border: 1px solid #FFFFFF;
-	border-radius: 1rem;
-	background-color: #FFFFFF;
 }
