--- a/static/css/register.css
+++ b/static/css/register.css
@@ -23,11 +23,11 @@ body {
 	font-size: 5rem;
 }
 
-.leftText, #login, #signup {
+.leftText, #signup {
 	font-size: 2rem;
 }
 
-#login, #signup {
+#signup {
 	text-shadow:
 		0px 0px 0 #000000,
 		0px 0px 0 #000000,  
@@ -53,9 +53,6 @@ input {
 	#title, label {
 		padding-left: 15px;
 		width: 100%;
-	}
-
-	#signup {
 	}
 
 	.container {
