--- a/static/css/my_meetups.css
+++ b/static/css/my_meetups.css
@@ -1,3 +1,9 @@
+#mainscreen {
+  background-color: #FFFFFF;
+  border: 1px solid #FFFFFF;
+  border-radius: 1rem;
+}
+
 .meeting{
   border-style: solid;
   border-color: #96BCFF;
