--- a/static/css/my_meetups.css
+++ b/static/css/my_meetups.css
@@ -45,7 +45,9 @@ ul.scroll-menu {
   -o-box-shadow:none;
   box-shadow:none
 }
-
+.btn-danger{
+  
+}
 .scrollable-menu {
   height: auto;
   max-height: 50rem;
