--- a/static/css/my_meetups.css
+++ b/static/css/my_meetups.css
@@ -45,9 +45,10 @@ ul.scroll-menu {
   -o-box-shadow:none;
   box-shadow:none
 }
-.btn-danger{
-  
+
+input .btn .btn-danger .pull-right {
 }
+
 .scrollable-menu {
   height: auto;
   max-height: 50rem;
