--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -22,7 +22,7 @@
   color: #FFE5B8;
 }
 
-#addFr{
+#addFr {
   width: 95%;
   margin-left: .25rem;
 }
@@ -43,7 +43,7 @@
   z-index: 2;
 }
 
-.sidenav a, .sidenav label {
+.closebtn, #noFriends, #insideSideNav div {
   margin-bottom: 0;
   padding: 8px 8px 8px 32px;
   text-decoration: none;
@@ -53,7 +53,12 @@
   transition: 0.3s;
 }
 
-.sidenav a:hover, .offcanvas a:focus, .sidenav label:hover, .offcanvas label:focus{
+#insideSideNav input {
+  padding: 0px 5px;
+  margin-top: 8px;
+}
+
+.sidenav a:hover, .offcanvas a:focus, #insideSideNav div:hover, .offcanvas label:focus{
   color: #96BCFF;
 }
 
